# skoczek

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: create-pre-release.yml
fish/completions/: j.fish  skoczek.fish
fish/functions/: j.fish
scripts/: create_shell_package.sh  deploy_to_dotfiles.sh
shell/bash/: completions.sh  functions.sh
shell/fish/completions/: skoczek.fish
shell/fish/functions/: j.fish
src/: cli.rs  cmd.rs  main.rs
