[package]
name = "skoczek"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clap = "2.33.3"
itertools = "0.10.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
